--- a/src/main/resources/templates/preferences.html
+++ b/src/main/resources/templates/preferences.html
@@ -77,7 +77,7 @@
                                          </div>
 -->
                     <div class="form-group">
-                        <input type="text" name="projecttype" class="form-control" th:field="*{projecttype}" placeholder="ProjectName"/>
+                        <input type="text" name="projecttype" class="form-control" th:field="*{projecttype}" value="SCRUM" placeholder="ProjectName"/>
                     </div>
 					 <h4> Enter Project Details </h4>
 		    <div class="form-group">
@@ -85,7 +85,7 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="date" name="startdate" class="form-control" th:field="*{startdate}" placeholder="StartDate in mm-dd-yyyy"/>
+                        <input type="date" name="startdate" class="form-control" th:field="*{startdate}" value="05/31/2015" placeholder="StartDate in mm-dd-yyyy"/>
                     </div>
 
                     <div class="form-group">
@@ -94,7 +94,7 @@
 
 
 		    <div class="form-group">
-                        <input type="date" name="enddate" class="form-control" th:field="*{enddate}"  placeholder="EndDate in mm-dd-yyyy"/>
+                        <input type="date" name="enddate" class="form-control" th:field="*{enddate}" value="05/31/2015" placeholder="EndDate in mm-dd-yyyy"/>
                     </div>    
 
 
