--- a/src/main/resources/templates/createsprint.html
+++ b/src/main/resources/templates/createsprint.html
@@ -10,6 +10,18 @@
     <!-- Theme style -->
     <link href="../../css/AdminLTE.css" rel="stylesheet" type="text/css"/>
 
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <title>JSP Page</title>
+    <c:set var="baseURL" value="${pageContext.servletContext.contextPath}" />
+    <link href="${baseURL}/resources/sample/themes/redmond/jquery-ui-1.8.16.custom.css" rel="stylesheet" type="text/css" />
+    <link href="${baseURL}/resources/sample/scripts/jtable/themes/standard/green/jtable_green.css" rel="stylesheet" type="text/css" />
+
+    <script src="${baseURL}/resources/sample/scripts/jquery-1.6.4.min.js" type="text/javascript"></script>
+    <script src="${baseURL}/resources/sample/scripts/jquery-ui-1.8.16.custom.min.js" type="text/javascript"></script>
+
+    <script src="${baseURL}/resources/sample/scripts/jtable/jquery.jtable.js" type="text/javascript"></script>
+    <script src="${baseURL}/resources/sample/scripts/jtable/external/json2.js" type="text/javascript"></script>
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -58,6 +70,23 @@
 
 
         }
+        function addSprint() {
+            console.log("in function");
+
+            var a = document.forms["myForm"]["sprintname"].value;
+            if (a == null || a == "") {
+                alert("sprint must be filled out");
+                return false;
+            }
+        }
+        function updateSprint() {
+            console.log("in function");
+            var a = document.forms["myForm"]["sprintname"].value;
+            if (a == null || a == "") {
+                alert("sprint must be filled out");
+                return false;
+            }
+        }
 
     </script>
 
@@ -98,13 +127,73 @@
         <div class="footer">
 
             <button type="submit" class="btn bg-olive btn-block">Submit</button>
-
-
+            <button type="button" class="btn bg-olive btn-block" onclick="addSprint()">Add Sprint</button>
+            <button type="button" class="btn bg-olive btn-block" onclick="updateSprint()">Update Sprint</button>
         </div>
     </form>
 
 
 </div>
+
+<script>
+    $(document).ready(function() {
+        //setup the jtable that will display the results
+        $('#SprintTableContainer').jtable({
+            title: 'Sprint Table Details',
+            selecting: true, //Enable selecting
+            paging: true, //Enable paging
+            pageSize: 10, //Set page size (default: 10)
+            sorting: true, //Enable sorting
+            actions: {
+                listAction: '${baseURL}/datatable/getAllSprint',
+                createAction: '${baseURL}/datatable/addSprint',
+                updateAction: '${baseURL}/datatable/updateSprint',
+                deleteAction: '${baseURL}/datatable/deleteSprint'
+            },
+            fields: {
+                sprintId: {
+                    key: true,
+                    list: true,
+                    create: false,
+                    edit: false
+                },
+                sprintName: {
+                    title: 'Sprint Name',
+                    width: '25%'
+                },
+                startDate: {
+                    title: 'Start Date',
+                    width: '30%'
+                },
+                endDate: {
+                    title: 'End Date',
+                    width: '30%'
+                }
+            },
+            rowInserted: function (event, data) {
+                //if (data.record.Name.indexOf('AnySprintName') >= 0) {
+                $('#SprintTableContainer').jtable('selectRows', data.row);
+                console.log("records inserted");
+                //$('#SprintTableContainer').jtable('load');
+                //}
+            },
+            //Register to selectionChanged event to hanlde events
+            recordAdded: function(event, data){
+                //after record insertion, reload the records
+                $('#SprintTableContainer').jtable('load');
+            },
+            recordUpdated: function(event, data){
+                //after record updation, reload the records
+                $('#SprintTableContainer').jtable('load');
+            }
+        });
+        $('#SprintTableContainer').jtable('load');
+
+    });
+</script>
+
+<h2>Groups</h2>
+<div id="SprintTableContainer" style="width:99%;"></div>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" type="text/javascript"></script>
