--- a/src/main/resources/templates/JTableTest.html
+++ b/src/main/resources/templates/JTableTest.html
@@ -3,19 +3,22 @@
 <head lang="en">
     <meta charset="UTF-8" />
     <title></title>
+    <link href="/js/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="/js/jquery-ui.css" rel="stylesheet" type="text/css" />
+    <link href="/js/jtable.2.4.0/themes/metro/blue/jtable.min.css" rel="stylesheet" type="text/css" /> 
+    <link href="https://code.jquery.com/ui/1.10.0/jquery-ui.min.css" rel="stylesheet" type="text/css" /> 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" type="text/javascript"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
-    <link href="/js/jtable.2.4.0/themes/metro/blue/jtable.min.css" rel="stylesheet" type="text/css" /> 
+    <script src="https://code.jquery.com/ui/1.10.0/jquery-ui.min.js" type="text/javascript"></script>
     <script src="/js/jtable.2.4.0/jquery.jtable.min.js" type="text/javascript"></script>
 </head>
 <body>
-<div id="PeopleTableContainer" style="width: 600px;"></div>
+<div id="PeopleTableContainer" style="width: 1024px;"></div>
 <script type="text/javascript">
     $(document).ready(function () {
         //Prepare jTable
         $('#PeopleTableContainer').jtable({
-            title: 'Table of people',
+            title: 'Scrum Stories',
             actions: {
                 listAction: '/cmpe281project/api/getAllStoriesForJTable?projectId=1',
                 createAction: 'PersonActions.php?action=create',
@@ -24,33 +27,35 @@
             },
             fields: {
                 id: {
-                    title: 'TaskId'
+                    title: 'TaskId',
+                    key: true,
+                    list: false
                 },
                 status: {
                     title: 'Status',
-                    width: '40%'
+                    width: '10%'
                 },
                 taskName: {
                     title: 'Name',
-                    width: '20%'
+                    width: '10%'
                 },
                 taskDescription: {
                     title: 'Description',
-                    width: '30%',
+                    width: '10%',
                     create: false,
                     edit: false
                 },
                 resourceName: {
-                    title: 'resourceName',
-                    width: '20%'
+                    title: 'Resource Name',
+                    width: '10%'
                 },
                 hoursAllotted: {
-                    title: 'hoursAlloted',
-                    width: '20%'
+                    title: 'Hours Allotted',
+                    width: '10%'
                 },
                 hoursCompleted: {
-                    title: 'hoursCompleted',
-                    width: '20%'
+                    title: 'Hours Completed',
+                    width: '10%'
                 }
             }
         });
