--- a/src/main/resources/templates/JTableTest.html
+++ b/src/main/resources/templates/JTableTest.html
@@ -13,11 +13,11 @@
     <script src="/js/jtable.2.4.0/jquery.jtable.min.js" type="text/javascript"></script>
 </head>
 <body>
-<div id="PeopleTableContainer" style="width: 1024px;"></div>
+<div id="JTableContainer" style="width: 1024px;"></div>
 <script type="text/javascript">
     $(document).ready(function () {
         //Prepare jTable
-        $('#PeopleTableContainer').jtable({
+        $('#JTableContainer').jtable({
             title: 'Scrum Stories',
             defaultSorting: 'taskName DESC',
             sorting: true,
@@ -58,11 +58,17 @@
                     title: 'Hours Completed',
                     width: '10%'
                 }
+            },
+            recordsLoaded: function(event, data) {
+                $('.jtable-data-row').click(function() {
+                    var row_id = $(this).attr('data-record-key');
+                    alert('clicked row with id '+row_id);
+                });
             }
         });
 
         //Load person list from server
-        $('#PeopleTableContainer').jtable('load');
+        $('#JTableContainer').jtable('load');
 
     });
 
