--- a/src/main/resources/templates/JTableTest.html
+++ b/src/main/resources/templates/JTableTest.html
@@ -13,6 +13,9 @@
     <script src="/js/jtable.2.4.0/jquery.jtable.min.js" type="text/javascript"></script>
 </head>
 <body>
+<input type="hidden" id="projectId" th:value="${project.getId()}" />
+<input type="hidden" id="userId" th:value="${userSessionInfo.getId()}" />
+
 <div id="JTableContainer" style="width: 1024px;"></div>
 <script type="text/javascript">
     $(document).ready(function () {
@@ -22,10 +25,10 @@
             defaultSorting: 'taskName DESC',
             sorting: true,
             actions: {
-                listAction: '/cmpe281project/api/getAllStoriesForJTable?projectId=1',
-                createAction: '/cmpe281project/api/scrum/createStory?projectId=1',
-                updateAction: '/cmpe281project/api/scrum/updateStory?projectId=1',
-                deleteAction: '/cmpe281project/api/scrum/deleteStory?projectId=1'
+                listAction: '/cmpe281project/api/getAllStoriesForJTable?projectId=' + $('#projectId').val(),
+                createAction: '/cmpe281project/api/scrum/createStory?projectId=' + $('#projectId').val(),
+                updateAction: '/cmpe281project/api/scrum/updateStory?projectId=' + $('#projectId').val(),
+                deleteAction: '/cmpe281project/api/scrum/deleteStory?projectId=' + $('#projectId').val()
             },
             fields: {
                 id: {
@@ -69,6 +72,8 @@
 
         //Load person list from server
         $('#JTableContainer').jtable('load');
+
+        alert($('#userId').val() + ' ' + $('#projectId').val());
 
     });
 
