Get DB connectivity working with Scrum stories

--- a/src/main/resources/templates/createsprint.html
+++ b/src/main/resources/templates/createsprint.html
@@ -10,7 +10,7 @@
     <!-- Theme style -->
     <link href="../../css/AdminLTE.css" rel="stylesheet" type="text/css"/>
 
-    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252" />
     <title>JSP Page</title>
     <c:set var="baseURL" value="${pageContext.servletContext.contextPath}" />
     <link href="${baseURL}/resources/sample/themes/redmond/jquery-ui-1.8.16.custom.css" rel="stylesheet" type="text/css" />
