Functioning Project Page

--- a/src/main/resources/templates/manageProjectsForAllType.html
+++ b/src/main/resources/templates/manageProjectsForAllType.html
@@ -44,13 +44,12 @@
                 },
                 projecttype: {
                     title: 'ProjectType',
-                    width: '10%'
+                    width: '10%',
+                    options: {'SCRUM' : 'Scrum', 'KANBAN' : 'Kanban', 'WATERFALL' : 'Waterfall'}
                 },
                 startdate: {
                     title: 'StartDate',
-                    width: '10%',
-                    create: false,
-                    edit: false
+                    width: '10%'
                 },
                 enddate: {
                     title: 'EndDate',
@@ -58,7 +57,9 @@
                 },
                 ownername: {
                     title: 'OwnerName',
-                    width: '10%'
+                    width: '10%',
+                    create: false,
+                    edit: false
                 }
 
             },
