date picker for taskwf

--- a/src/main/resources/templates/WFJtable.html
+++ b/src/main/resources/templates/WFJtable.html
@@ -56,11 +56,15 @@
                 },
                 startDate: {
                     title: 'Start Date',
-                    width: '30%'
+                    width: '30%',
+                    type: 'date',
+                    displayFormat: 'mm/dd/yy'
                 },
                 endDate: {
                     title: 'End Date',
-                    width: '30%'
+                    width: '30%',
+                    type: 'date',
+                    displayFormat: 'mm/dd/yy'
                 }
             },
                 recordsLoaded: function(event, data) {
