--- a/src/main/resources/templates/WFJtable.html
+++ b/src/main/resources/templates/WFJtable.html
@@ -29,7 +29,7 @@
                 listAction: '/cmpe281project/api/WF/listTasks?projectId=' + $('#projectId').val(),
                 createAction: '/cmpe281project/api/WF/createTask?projectId='  + $('#projectId').val(),
                 updateAction: '/cmpe281project/api/WF/updateTask?projectId='  + $('#projectId').val(),
-                deleteAction: '/cmpe281project/api/WF/deleteTask?projectId=' +  + $('#projectId').val()
+                deleteAction: '/cmpe281project/api/WF/deleteTask?projectId=' +  $('#projectId').val()
             },
             fields: {
                 id: {
