--- a/src/main/resources/templates/manageCardsforProjectKanban.html
+++ b/src/main/resources/templates/manageCardsforProjectKanban.html
@@ -23,6 +23,13 @@
 
 <div id="TaskKanbanJTableContainer" style="..."></div>
 <script type="text/javascript">
+    var processClick = function(event, data) {
+        $('.jtable-data-row').click(function() {
+            var row_id = $(this).attr('data-record-key');
+            alert('clicked row with id '+row_id);
+        });
+    }
+
     $(document).ready(function() {
         //Prepare JTable for Card
         $('#TaskKanbanJTableContainer').jtable({
@@ -63,12 +70,8 @@
                 }
 
             },
-            recordsLoaded: function(event, data) {
-                $('jtable-data-row').click(function() {
-                    var row-id = $(this).attr('data-record-key');
-                    alert('clicked row with id '+row-id);
-                });
-            }
+            recordsLoaded: processClick,
+            rowInserted: processClick
         });
         $('#TaskKanbanJTableContainer').jtable('load');
     });
