--- a/src/main/resources/templates/manageProjectsForAllType.html
+++ b/src/main/resources/templates/manageProjectsForAllType.html
@@ -20,6 +20,13 @@
 <h1> Manage Different Projects of all Types</h1>
 <div id="JTableContainer" style="width: 1024px;"></div>
 <script type="text/javascript">
+    var processClick = function(event, data) {
+        $('.jtable-data-row').click(function() {
+            var row_id = $(this).attr('data-record-key');
+            alert('clicked row with id '+row_id);
+        });
+    }
+
     $(document).ready(function () {
         //Prepare jTable
         $('#JTableContainer').jtable({
@@ -63,12 +70,8 @@
                 }
 
             },
-            recordsLoaded: function(event, data) {
-                $('.jtable-data-row').click(function() {
-                    var row_id = $(this).attr('data-record-key');
-                    alert('clicked row with id '+row_id);
-                });
-            }
+            recordsLoaded: processClick,
+            rowInserted: processClick
         });
 
         $('#JTableContainer').jtable('load');
