--- a/src/main/resources/templates/manageStoriesForProjectSprint.html
+++ b/src/main/resources/templates/manageStoriesForProjectSprint.html
@@ -20,6 +20,13 @@
 <h1>Manage stories for project <span th:text="${project.getProjectname()}"></span> and sprint <span th:text="${sprint.getId()}" /></h1>
 <div id="JTableContainer" style="width: 1024px;"></div>
 <script type="text/javascript">
+    var processClick = function(event, data) {
+        $('.jtable-data-row').click(function() {
+            var row_id = $(this).attr('data-record-key');
+            alert('clicked row with id '+row_id);
+        });
+    }
+
     $(document).ready(function () {
         //Prepare jTable
         $('#JTableContainer').jtable({
@@ -64,12 +71,8 @@
                     width: '10%'
                 }
             },
-            recordsLoaded: function(event, data) {
-                $('.jtable-data-row').click(function() {
-                    var row_id = $(this).attr('data-record-key');
-                    alert('clicked row with id '+row_id);
-                });
-            }
+            recordsLoaded: processClick,
+            rowInserted: processClick
         });
 
         $('#JTableContainer').jtable('load');
