--- a/src/main/resources/templates/manageCardsforProjectKanban.html
+++ b/src/main/resources/templates/manageCardsforProjectKanban.html
@@ -51,22 +51,22 @@
                 status: {
                     title: 'Status',
                     options: {'1': 'Ready', '2': 'Inprogress', '3': 'Completed'},
-                    width: 10%
+                    width: '10%'
                 },
 
                 taskName: {
                     title: ' Card Name',
-                    width: 10%,
+                    width: '10%',
                     sorting: true
                 },
 
                 taskDescription: {
                     title: 'Card Description',
-                    width: 10%
+                    width: '10%'
                 },
                 resourceName: {
                     title: 'Resource Name',
-                    width: 10%
+                    width: '10%'
                 }
 
             },
