--- a/src/main/resources/templates/manageSprintsForProjectScrum.html
+++ b/src/main/resources/templates/manageSprintsForProjectScrum.html
@@ -28,7 +28,7 @@
             actions: {
                 listAction: '/cmpe281project/api/Scrum/listSprints?projectId=' + $('#projectId').val(),
                 createAction: '/cmpe281project/api/Scrum/createSprint?projectId='  + $('#projectId').val(),
-                updateAction: '/cmpe281project/api/Scrum/updateSprint?projectId='  + $('#projectId').val(),
+                updateAction: '/cmpe281project/api/Scrum/updateSprint?projectId='  + $('#projectId').val()
             },
             fields: {
                 id: {
