Backward incompatible change. String -> Date

--- a/src/main/resources/templates/manageProjectsForAllType.html
+++ b/src/main/resources/templates/manageProjectsForAllType.html
@@ -56,11 +56,15 @@
                 },
                 startdate: {
                     title: 'StartDate',
-                    width: '10%'
+                    width: '10%',
+                    type: 'date',
+                    displayFormat: 'mm/dd/yy'
                 },
                 enddate: {
                     title: 'EndDate',
-                    width: '10%'
+                    width: '10%',
+                    type: 'date',
+                    displayFormat: 'mm/dd/yy'
                 },
                 ownername: {
                     title: 'OwnerName',
