--- a/src/main/resources/templates/manageSprintsForProjectScrum.html
+++ b/src/main/resources/templates/manageSprintsForProjectScrum.html
@@ -19,6 +19,13 @@
 <h1>Manage Sprints for project <span th:text="${project.getProjectname()}"></span></h1>
 <div id="JTableContainer" style="width: 1024px;"></div>
 <script type="text/javascript">
+    var processClick = function(event, data) {
+        $('.jtable-data-row').off('click').on('click', (function() {
+            var row_id = $(this).attr('data-record-key');
+            alert('clicked row with id '+row_id);
+        }));
+    }
+
     $(document).ready(function () {
         //Prepare jTable
         $('#JTableContainer').jtable({
@@ -53,11 +60,8 @@
                     displayFormat: 'mm-dd-yy'
                 }
             },
-            recordsLoaded: function(event, data) {
-                $('.jtable-data-row').click(function() {
-                    var row_id = $(this).attr('data-record-key');
-                    alert('clicked row with id '+row_id);
-                });
+            recordsLoaded: processClick,
+            rowInserted: processClick
             }
         });
 
