--- a/src/main/resources/templates/manageCardsforProjectKanban.html
+++ b/src/main/resources/templates/manageCardsforProjectKanban.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title></title>
 
     <link href="/js/normalize.css" rel="stylesheet" type="text/css" />
@@ -14,21 +14,20 @@
     <script src="/js/jtable.2.4.0/jquery.jtable.min.js" type="text/javascript"></script>
 </head>
 <body>
-<input type="hidden" id="ProjectId" th:value="${project.getId()}" />
+<input type="hidden" id="projectId" th:value="${project.getId()}" />
 <input type="hidden" id="userId" th:value="${userSessionInfo.getId()}" />
 
-<h1> Manage Cards for project <span th: text="${project.getProjectName()}"></span></h1>
-
-
+<h1> Manage Cards for project <span th:text="${project.getProjectname()}"></span></h1>
 
 <div id="TaskKanbanJTableContainer" style="..."></div>
 <script type="text/javascript">
     var processClick = function(event, data) {
-        $('.jtable-data-row').click(function() {
+        $('.jtable-data-row').off('click').on('click', (function() {
             var row_id = $(this).attr('data-record-key');
             alert('clicked row with id '+row_id);
-        });
+        }));
     }
+
 
     $(document).ready(function() {
         //Prepare JTable for Card
