--- a/src/main/resources/templates/manageStoriesForProjectSprint.html
+++ b/src/main/resources/templates/manageStoriesForProjectSprint.html
@@ -47,6 +47,7 @@
                 },
                 status: {
                     title: 'Status',
+                    options: {'1': 'Ready', '2': 'Inprogress', '3': 'Completed'},
                     width: '10%'
                 },
                 taskName: {
