--- a/src/main/resources/templates/WFJtable.html
+++ b/src/main/resources/templates/WFJtable.html
@@ -46,6 +46,7 @@
                         },
                         status: {
                             title: 'Status',
+                            options: {'1': 'Ready', '2': 'Inprogress', '3': 'Completed'},
                             width: '10%'
                         },
                         taskName: {
