--- a/src/main/resources/templates/manageProjectsForAllType.html
+++ b/src/main/resources/templates/manageProjectsForAllType.html
@@ -236,8 +236,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
-                Page Header
-                <small>Optional description</small>
+                Projects Page
+                <small>This page displays all your projects</small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
