Do the impossible

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,8 +29,7 @@
     </script>
 
 </head>
-<body class="bg-black">
-
+<body class="bg-white">
 <div class="form-box" id="login-box">
     <div class="header">Login not valid</div>
     <form action="#" name="myForm" onsubmit="return validateForm()" th:action="@{/cmpe281project/index/users}" method="post">
