--- a/src/main/resources/templates/nosuchuser.html
+++ b/src/main/resources/templates/nosuchuser.html
@@ -30,7 +30,7 @@
 
 
 </head>
-<body class="bg-black">
+<body class="bg-white">
 
 <div class="form-box" id="login-box">
     <h4>The User does not exist. Please check username or register</h4>
