--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -52,7 +52,7 @@
             
 
     </head>
-    <body class="bg-black">
+    <body class="bg-white">
 		
         <div class="form-box" id="login-box">
             <div class="header">Register New Membership</div>
