--- a/src/main/resources/templates/userexists.html
+++ b/src/main/resources/templates/userexists.html
@@ -1,98 +1,80 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" class="bg-black">
-    <head>
-        
-        <title>Cmpe281project | Registration Page</title>
-        
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-        <!-- Theme style -->
-        <link href="../../css/AdminLTE.css" rel="stylesheet" type="text/css" />
+<head>
 
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-          <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-        <![endif]-->
-        <script>
-        
+    <title>Cmpe281project | Registration Page</title>
+
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"
+          type="text/css"/>
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css"/>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+    <!-- Theme style -->
+    <link href="../../css/AdminLTE.css" rel="stylesheet" type="text/css"/>
+
+    <script>
         function validateForm() {
-        	
-	console.log("in function");
-        	
+            console.log("in function");
+
             var x = document.forms["myForm"]["username"].value;
             var y = document.forms["myForm"]["password"].value;
-            
-
 
             if (x == null || x == "") {
                 alert("username must be filled out");
                 return false;
             }
-            
-           
-            
+
             if (y == null || y == "") {
                 alert("Password must be filled out");
                 return false;
             }
         }
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        </script>
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-    </head>
-    <body class="bg-black">
-		
-        <div class="form-box" id="login-box">
-            <h4>User Already Exists. You can login <a th:href="@{/cmpe281project}">Here</a></h4>
-            
-            <form action="#" name="myForm" onsubmit="return validateForm()" th:action="@{/cmpe281project/users}" th:object="${resource}" method="post">
-                <div class="body bg-gray">
-                    <div class="form-group">
-                    <p><input type="text" name="username" th:field="*{username}" placeholder="Username" class="form-control"/></p>         
-                    </div>
-                    
-                    <div class="form-group">
-                        <p><input type="password" name="password" id="password" th:field="*{password}" placeholder="Password" class="form-control"/></p>
-                    </div>
-                     
-                   
-                </div>
-                <div class="footer">                    
-
-                    <button type="submit" class="btn bg-olive btn-block">Sign me up</button>
-
-                    
-                </div>
-            </form>
-
-            
+    </script>
+</head>
+<body class="bg-white">
+<div class="form-box" id="login-box">
+    <div class="header bg-blue">Register New Membership</div>
+    <div class="alert alert-danger" role="alert" style="margin-top: 10px; margin-bottom: 10px; margin-left: 10px; margin-right: 10px;
+">
+        <div class="row vertical-align">
+            <div class="col-xs-2">
+                <span class="glyphicon glyphicon-remove" aria-hidden="false"></span>
+            </div>
+            <div class="col-xs-10">
+                User Already Exists. You can login <a th:href="@{/cmpe281project}">Here</a>
+            </div>
         </div>
+    </div>
+    <form action="#" name="myForm" onsubmit="return validateForm()" th:action="@{/cmpe281project/users}"
+          th:object="${resource}" method="post">
+        <div class="body bg-gray">
+            <div class="form-group">
+                <p><input type="text" name="username" th:field="*{username}" placeholder="Username"
+                          class="form-control"/>
+                </p>
+            </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" type="text/javascript"></script>
+            <div class="form-group">
+                <p><input type="password" name="password" id="password" th:field="*{password}" placeholder="Password"
+                          class="form-control"/></p>
+            </div>
+        </div>
+        <div class="footer">
+            <button type="submit" class="btn bg-blue btn-block">Sign me up</button>
+        </div>
+    </form>
 
-    </body>
+
+</div>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" type="text/javascript"></script>
+
+</body>
 </html>
 
